prevented stretching of other boxes when opened

--- a/src/components/FaqsBox/index.scss
+++ b/src/components/FaqsBox/index.scss
@@ -15,6 +15,9 @@
     overflow: hidden;
     display: grid;
     grid-template-rows: 1fr 0;
+    height: fit-content;
+
+
 
 
     &>:first-child {
